# cors_multiple_origins

./: Cargo.toml
src/: main.rs
