[package]
name = "cors_multiple_origins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
tokio = { version = "1.19.2", features = ["macros", "signal", "full"] }
tower-http = { version = "0.3.4", features = ["cors"] }